<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.stratazima.testapp.home.MainActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/cityText"
                android:hint="@string/city"
                />
        <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/stateText"
                android:hint="@string/state"
                android:maxLength="2"
                />
        <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/getWeather"
                android:id="@+id/go"/>
    </LinearLayout>
    <Spinner
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/spinner" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="20dp"/>
</RelativeLayout>
